--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
                 <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                  style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
+                    style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -65,12 +65,20 @@
                 <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
-                  <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
+                  <p>I am a B.Tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields. I can
+                    manage a project comfortably. I love to read about new technologies. And whenever I get time I try
+                    to practice and try new problems.</p>
                   <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
                   <ul class="navt list-unstyled mt-2 mb-2">
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="30" ></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="30" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill"
+                          data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon"
+                          data-icon="akar-icons:linkedin-fill" data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://twitter.com/kg_0805"><span class="iconify icon"
+                          data-icon="ant-design:twitter-circle-filled" data-width="30"></span></a></li>
                   </ul>
                   <h5 style="margin-top: 0.8em;">Contact me here!</h5>
                   <p>Email: <a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
@@ -85,8 +93,10 @@
                 <h2 class="mb-4">Profile</h2>
                 <h4 class="mb-4">I'm a Developer from Indore, India . I aim to make a
                   difference through my creative solution.</h4>
-                <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
-                
+                <p>I am a B.Tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields. I can
+                  manage a project comfortably. I love to read about new technologies. And whenever I get time I try to
+                  practice and try new problems.</p>
+
               </div>
               <div class="exp mt-5 ftco-animate">
                 <h2 class="mb-4">Experience</h2>
@@ -117,13 +127,14 @@
                     <p>Feb 2020 - May 2020</p>
                   </div>
                 </div>
-                
+
               </div>
               <div class="exp mt-5 ftco-animate">
                 <h2 class="mb-4">Education</h2>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>Bachelor of Technology in Computer Science &amp; Engineering<span> - Dr. Vishwanath Karad MIT World Peace University</span> </h4>
+                    <h4>Bachelor of Technology in Computer Science &amp; Engineering<span> - Dr. Vishwanath Karad MIT
+                        World Peace University</span> </h4>
                     <p class="location">Pune - India</p>
                   </div>
                   <div class="year">
@@ -229,10 +240,16 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
-                <ul class="navt list-unstyled" style="margin-left: 117.5px;" >
-                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="50"></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="50" ></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="50" ></span></a></li>
+                <ul class="navt list-unstyled" style="margin-left: 117.5px;">
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill"
+                        data-width="50"></span></a></li>
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon"
+                        data-icon="akar-icons:linkedin-fill" data-width="50"></span></a></li>
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://twitter.com/kg_0805"><span class="iconify icon"
+                        data-icon="ant-design:twitter-circle-filled" data-width="50"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
