--- a/index.html
+++ b/index.html
@@ -92,12 +92,20 @@
                 <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
-                  <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
+                  <p>I am a B.Tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields. I can
+                    manage a project comfortably. I love to read about new technologies. And whenever I get time I try
+                    to practice and try new problems.</p>
                   <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
                   <ul class="navt list-unstyled mt-2 mb-2">
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="30" ></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="30" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill"
+                          data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon"
+                          data-icon="akar-icons:linkedin-fill" data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                        href="https://twitter.com/kg_0805"><span class="iconify icon"
+                          data-icon="ant-design:twitter-circle-filled" data-width="30"></span></a></li>
                   </ul>
                   <h5 style="margin-top: 0.8em;">Contact me here!</h5>
                   <p>Email: <a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
@@ -263,7 +271,7 @@
           </div>
         </div>
       </section>
-      <section class="ftco-section ftco-counter" id="section-counter">
+      <!-- <section class="ftco-section ftco-counter" id="section-counter">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
@@ -302,16 +310,22 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="navt list-unstyled" style="margin-left: 117.5px;">
-                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="50"></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="50" ></span></a></li>
-                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="50" ></span></a></li>
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill"
+                        data-width="50"></span></a></li>
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon"
+                        data-icon="akar-icons:linkedin-fill" data-width="50"></span></a></li>
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
+                      href="https://twitter.com/kg_0805"><span class="iconify icon"
+                        data-icon="ant-design:twitter-circle-filled" data-width="50"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
