--- a/about.html
+++ b/about.html
@@ -172,9 +172,8 @@
                 <div class="progress">
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="65" aria-valuemin="0"
                     aria-valuemax="100" style="width:65%">
-                    <span>65%</span>
+                    <span>65%</span></div>
                   </div>
-                </div>
               </div>
             </div>
             <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
@@ -195,6 +194,7 @@
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100" style="width:80%">
                     <span>80%</span>
+                    
                   </div>
                 </div>
               </div>
