--- a/about.html
+++ b/about.html
@@ -239,19 +239,12 @@
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
-              <div class="ftco-footer-widget mb-5">
-                <ul class="navt list-unstyled" style="margin-left: 117.5px;">
-                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
-                      href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill"
-                        data-width="50"></span></a></li>
-                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
-                      href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon"
-                        data-icon="akar-icons:linkedin-fill" data-width="50"></span></a></li>
-                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link"
-                      href="https://twitter.com/kg_0805"><span class="iconify icon"
-                        data-icon="ant-design:twitter-circle-filled" data-width="50"></span></a></li>
-                </ul>
-              </div>
+              <div class="social">
+                <a href="https://github.com/kg-0805" class="href"><span class="iconify" data-icon="akar-icons:github-fill" data-width="40"></span></a>&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/in/kg-0805/"><span class="iconify" data-icon="akar-icons:linkedin-fill" data-width="40"></span></a>&nbsp;&nbsp;
+                <a href="https://twitter.com/kg_0805"><span class="iconify" data-icon="akar-icons:twitter-fill" data-width="40"></span></a>
+
+            </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
                 <p class="h3 email"><a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
