--- a/index.html
+++ b/index.html
@@ -168,37 +168,37 @@
           </div>
           <div class="row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-1.jpg.pagespeed.ic.KnIz2RKbkv.jpg)"
+              <a href="https://github.com/kg-0805/ZooManagementSystem" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/zoo.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Illustration</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Application</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/ZooManagementSystem">Zoo Management System</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/ZooManagementSystem">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-2.jpg.pagespeed.ic.RA1-MwdNxN.jpg)"
+              <a href="https://github.com/kg-0805/IOT-Mini-Project" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image:url(images/museum.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Application &amp; Working model</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/IOT-Mini-Project">Smart Surveillance System for a Museum</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/IOT-Mini-Project">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
