--- a/index.html
+++ b/index.html
@@ -202,56 +202,56 @@
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-3.jpg.pagespeed.ic.iqHIdW7KcC.jpg)"
+              <a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/emergency.jpg)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Web Design</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Model &amp; Mobile Application</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/">Traffic management system using IoT for emergency Vehicles</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image:url(images/work-4.jpg)" data-scrollax=" properties: { translateY: '-30%'}">
+              <a href="https://ecgindore.co.in/" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image:url(images/ecg.jpg)" data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Website Development</h4>
+                <h2 class="heading"><a href="https://ecgindore.co.in/">Website for Elite Creative Group</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://ecgindore.co.in/">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-5.jpg.pagespeed.ic.NMFWd3NHwI.jpg)"
+              <a href="#" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/website.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Animation</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Website Development</h4>
+                <h2 class="heading"><a href="#">Personal Website</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
             </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
                 style="background-image:url(images/xwork-6.jpg.pagespeed.ic.T1h2rYBQeN.jpg)"
                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -267,7 +267,7 @@
                   life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
