--- a/about.html
+++ b/about.html
@@ -254,11 +254,11 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <p>
-                Copyright &copy;<script data-cfasync="false"
+                Kartik Gupta &copy;<script data-cfasync="false"
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> All rights reserved | Kartik Gupta
+                </script>
               </p>
             </div>
           </div>
