--- a/about.html
+++ b/about.html
@@ -232,8 +232,24 @@
                 </div>
               </div>
             </div>
+            <div class="row mb-5 justify-content-center">
+              <div class="col-md-5 text-center">
+            <div class="social" >
+              <span class="iconify" data-icon="logos:c" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="logos:c-plusplus" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="akar-icons:html-fill" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="akar-icons:css-fill" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="vscode-icons:file-type-python" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="logos:java" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="logos:mysql" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="cib:git" data-width="65"></span>&emsp;
+              <span class="iconify" data-icon="logos:wordpress" data-width="150"></span>&emsp;
+          </div>
+          </div>
+          </div>
           </div>
         </div>
+        
       </section>
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
