--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Kartik Gupta</a></h1>
+              <h1 class="mb-4"><a href="index" class="logo">Kartik Gupta</a></h1>
               <ul>
                 <li class="active"><a href="index"><span><small>01</small>Home</span></a></li>
                 <li><a href="about"><span><small>02</small>Resume</span></a></li>
@@ -46,7 +46,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img"
+                <a class="colorlib-logo" href="index"><span class="logo-img"
                     style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
