--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Kartik Gupta</a></h1>
+              <h1 class="mb-4"><a href="index" class="logo">Kartik Gupta</a></h1>
               <ul>
-                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-                <li class="active"><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+                <li><a href="index"><span><small>01</small>Home</span></a></li>
+                <li><a href="about"><span><small>02</small>Resume</span></a></li>
+                <li><a href="services"><span><small>03</small>Services</span></a></li>
+                <li class="active"><a href="portfolio"><span><small>04</small>Portfolio</span></a></li>
                 <!-- <li><a href="blog.html"><span><small>05</small>Blog</span></a></li> -->
-                <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                <li><a href="contact"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -46,7 +46,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img"
+                <a class="colorlib-logo" href="index"><span class="logo-img"
                   style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
@@ -55,7 +55,7 @@
         </div>
       </header>
       <section class="ftco-section">
-        <div class="container mt-5">
+        <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
@@ -64,90 +64,90 @@
           </div>
           <div class="row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-1.jpg.pagespeed.ic.KnIz2RKbkv.jpg)"
+              <a href="https://github.com/kg-0805/ZooManagementSystem" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/zoo.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Illustration</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Application</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/ZooManagementSystem">Zoo Management System</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/ZooManagementSystem">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-2.jpg.pagespeed.ic.RA1-MwdNxN.jpg)"
+              <a href="https://github.com/kg-0805/IOT-Mini-Project" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image:url(images/museum.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Application &amp; Working model</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/IOT-Mini-Project">Smart Surveillance System for a Museum</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/IOT-Mini-Project">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-3.jpg.pagespeed.ic.iqHIdW7KcC.jpg)"
+              <a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/emergency.jpg)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Web Design</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Model &amp; Mobile Application</h4>
+                <h2 class="heading"><a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/">Traffic management system using IoT for emergency Vehicles</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://github.com/kg-0805/Traffic-Management-System-using-IOT-for-Emergency-Vehicles/">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image:url(images/work-4.jpg)" data-scrollax=" properties: { translateY: '-30%'}">
+              <a href="https://ecgindore.co.in/" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image:url(images/ecg.jpg)" data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Website Development</h4>
+                <h2 class="heading"><a href="https://ecgindore.co.in/">Website for Elite Creative Group</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p><a href="https://ecgindore.co.in/">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image:url(images/xwork-5.jpg.pagespeed.ic.NMFWd3NHwI.jpg)"
+              <a href="#" class="image d-flex justify-content-center align-items-center"
+                style="background-image:url(images/website.png)"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Animation</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Website Development</h4>
+                <h2 class="heading"><a href="#">Personal Website</a>
                 </h2>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
                   life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
             </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
                 style="background-image:url(images/xwork-6.jpg.pagespeed.ic.T1h2rYBQeN.jpg)"
                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -163,22 +163,7 @@
                   life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
-            </div>
-          </div>
-          <div class="row mt-5">
-            <div class="col text-center">
-              <div class="block-27">
-                <ul>
-                  <li><a href="#">&lt;</a></li>
-                  <li class="active"><span>1</span></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li><a href="#">&gt;</a></li>
-                </ul>
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
