--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <title>Kartik Gupta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="Description" content="Portfolio of Kartik Gupta who is a web developer and skilled in may more technologies.">
+<meta name="KeyWords" content="kartik gupta, kg0805 kartik, gupta, developer, kartik gupta developer, kartik gupta indore">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
   <script src="js/iconify.min.js"></script>
